--- a/index.html
+++ b/index.html
@@ -26,13 +26,20 @@
 
     <!-- Header -->
     <header>
+        <div class="container-fluid">
 
+        </div>
     </header>
     <!-- /Header -->
 
     <!-- Main -->
     <main>
+        <div class="ms-container-big d-flex">
+            <div class="ms-sidebar">
 
+            </div>
+            <div class="ms-main-content"></div>
+        </div>
     </main>
     <!-- /Main -->
 
