--- a/index.html
+++ b/index.html
@@ -35,8 +35,15 @@
     <!-- Main -->
     <main>
         <div class="ms-container-big d-flex">
-            <div class="ms-sidebar">
-
+            <div class="ms-sidebar d-flex flex-column text-white">
+                <ul class="ms-sidebar-menu">
+                    <li class="mb-2"><a href="#" class="p-3"><i class="fa-solid fa-house"></i><span class="d-none d-lg-inline ps-3">Home</span></a></li>
+                    <li class="mb-2"><a href="#" class="p-3"><i class="fa-solid fa-chart-simple fa-lg"></i><span class="d-none d-lg-inline ps-3">Stats</span></a></li>
+                    <li class="mb-2"><a href="#" class="p-3"><i class="fa-solid fa-signal"></i><span class="d-none d-lg-inline ps-3">Signals</span></a></li>
+                </ul>
+                <div class="mt-auto">
+                    <a href="#" class="p-3"><i class="fa-solid fa-gear"></i><span class="d-none d-lg-inline ps-3">Admin</span></a>
+                </div>
             </div>
             <div class="ms-main-content"></div>
         </div>
