Header barra di ricerca

--- a/index.html
+++ b/index.html
@@ -27,7 +27,16 @@
     <!-- Header -->
     <header>
         <div class="container-fluid">
-
+            <div class="row align-items-center">
+                <div class="col-1">logo</div>
+                <div class="col flex-grow-1 my-auto">
+                    <div class="input-group">
+                        <button class="btn btn-outline-dark bg-dark-subtle border-0" type="button" id="button-addon1"><i class="fa-solid fa-magnifying-glass"></i></button>
+                        <input type="text" class="form-control bg-dark-subtle border-0" placeholder="Prova a cercare: lezioni di laravel">
+                    </div>                      
+                </div>
+                <div class="col-1">menu icone</div>
+            </div>
         </div>
     </header>
     <!-- /Header -->
