--- a/index.html
+++ b/index.html
@@ -27,20 +27,31 @@
     <!-- Header -->
     <header>
         <div class="container-fluid">
-            <div class="row align-items-center">
-                <div class="col-1 ms-logo">
+            <div class="d-flex align-items-center">
+                <div class="ms-logo">
                     <a href="#">
                         <img src="img/logo.svg" alt="Logo Grande" class="ms-logo-big d-none d-lg-block">
                         <img src="img/mobile-logo.png" alt="Logo Mobile" class="ms-logo-small d-lg-none">
                     </a>
                 </div>
-                <div class="col flex-grow-1 ms-4">
+                <div class="flex-grow-1 mx-4">
                     <div class="input-group">
                         <button class="btn btn-outline-dark bg-dark-subtle border-0" type="button" id="button-addon1"><i class="fa-solid fa-magnifying-glass"></i></button>
                         <input type="text" class="form-control bg-dark-subtle border-0" placeholder="Prova a cercare: lezioni di laravel">
                     </div>                      
                 </div>
-                <div class="col-1">menu icone</div>
+                <div class="d-flex justify-content-end ms-header-icons">
+                    <a href="#"><i class="fa-solid fa-list-ul me-3 d-none d-lg-inline-block"></i></a>
+                    <a href="#"><i class="fa-solid fa-circle-question me-3 d-none d-lg-inline-block"></i></a>
+                    <a href="#"><i class="fa-solid fa-ellipsis-vertical me-3 d-none d-lg-inline-block"></i></a>
+                    <a href="#" data-bs-toggle="dropdown" class="ms-bell"><i class="fa-solid fa-bell me-3"></i></a>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="#">Profilo</a></li>
+                        <li><a class="dropdown-item" href="#">Fatturazione</a></li>
+                        <li><a class="dropdown-item" href="#">Logout</a></li>
+                    </ul>
+                    
+                </div>
             </div>
         </div>
     </header>
