--- a/index.html
+++ b/index.html
@@ -40,11 +40,11 @@
                         <input type="text" class="form-control bg-dark-subtle border-0" placeholder="Prova a cercare: lezioni di laravel">
                     </div>                      
                 </div>
-                <div class="d-flex justify-content-end ms-header-icons">
+                <div class="d-flex ms-header-icons">
                     <a href="#"><i class="fa-solid fa-list-ul me-3 d-none d-lg-inline-block"></i></a>
                     <a href="#"><i class="fa-solid fa-circle-question me-3 d-none d-lg-inline-block"></i></a>
                     <a href="#"><i class="fa-solid fa-ellipsis-vertical me-3 d-none d-lg-inline-block"></i></a>
-                    <a href="#" data-bs-toggle="dropdown" class="ms-bell"><i class="fa-solid fa-bell me-3"></i></a>
+                    <a href="#" data-bs-toggle="dropdown" class="ms-bell"><i class="fa-solid fa-bell"></i></a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" href="#">Profilo</a></li>
                         <li><a class="dropdown-item" href="#">Fatturazione</a></li>
