Main superiore Boolean apps

--- a/index.html
+++ b/index.html
@@ -79,13 +79,28 @@
             <!-- /Menù laterale -->
             <!-- Contenuto principale -->
             <div class="ms-main-content">
-                <div class="container-fluid ms-upper-main-content">
+                <!-- Parte superiore contenuto principale -->
+                <div class="container-fluid ms-upper-main-content text-white p-4">
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-2 order-md-3">a</div>
-                        <div class="col-12 col-md-4 col-lg-6 order-md-1">b</div>
+                        <div class="col-12 col-md-4 col-lg-6 order-md-1">
+                            <div>
+                                <h1 class="fs-4 d-inline-block">Boolean</h1>
+                                <span class="badge rounded-pill ms-bg-darkblue">Piano blaze</span>
+                            </div>
+                            <div>
+                                <span class="badge rounded-pill ms-bg-darkblue">3 app</span>
+                                <i class="fa-solid fa-angles-right fa-xs"></i>
+                                <span class="badge rounded-pill ms-bg-darkblue d-lg-none">+</span>
+                                <span class="badge rounded-pill ms-bg-darkblue d-none d-lg-inline">Boolean mobile app</span>
+                                <span class="badge rounded-pill ms-bg-darkblue d-none d-lg-inline">Boolean blog app</span>
+                                <span class="badge rounded-pill ms-bg-darkblue d-none d-lg-inline">Boolean web app</span>
+                            </div>
+                        </div>
                         <div class="col-12 col-md-4 col-lg-4 order-md-2">c</div>
                     </div>
                 </div>
+                <!-- /Parte superiore contenuto principale -->
             </div>
         </div>
     </main>
