--- a/index.html
+++ b/index.html
@@ -80,15 +80,15 @@
             <!-- Contenuto principale -->
             <div class="ms-main-content">
                 <!-- Parte superiore contenuto principale -->
-                <div class="container-fluid ms-upper-main-content text-white p-4">
+                <div class="container-fluid ms-upper-main-content text-white py-4 px-3">
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-2 order-md-3">a</div>
                         <div class="col-12 col-md-4 col-lg-6 order-md-1">
                             <div>
-                                <h1 class="fs-4 d-inline-block">Boolean</h1>
+                                <h1 class="fs-3 mb-1 d-inline-block">Boolean</h1>
                                 <span class="badge rounded-pill ms-bg-darkblue">Piano blaze</span>
                             </div>
-                            <div>
+                            <div class="mb-4">
                                 <span class="badge rounded-pill ms-bg-darkblue">3 app</span>
                                 <i class="fa-solid fa-angles-right fa-xs"></i>
                                 <span class="badge rounded-pill ms-bg-darkblue d-lg-none">+</span>
@@ -97,7 +97,10 @@
                                 <span class="badge rounded-pill ms-bg-darkblue d-none d-lg-inline">Boolean web app</span>
                             </div>
                         </div>
-                        <div class="col-12 col-md-4 col-lg-4 order-md-2">c</div>
+                        <div class="col-12 col-md-4 col-lg-4 order-md-2">
+                            <div class="lh-sm">studenti online negli ultimi 30 minuti</div>
+                            <div class="fs-3 mt-2">125</div>
+                        </div>
                     </div>
                 </div>
                 <!-- /Parte superiore contenuto principale -->
