Main superiore nuovo studente

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
     <main>
         <div class="ms-container-big d-flex">
             <!-- Menù laterale -->
-            <div class="ms-sidebar d-flex flex-column text-white">
+            <div class="ms-sidebar d-flex flex-column text-white flex-shrink-0">
                 <ul class="ms-sidebar-menu">
                     <li class="mb-2"><a href="#" class="p-3"><i class="fa-solid fa-house"></i><span class="d-none d-lg-inline ps-3">Home</span></a></li>
                     <li class="mb-2"><a href="#" class="p-3"><i class="fa-solid fa-chart-simple fa-lg"></i><span class="d-none d-lg-inline ps-3">Stats</span></a></li>
@@ -82,7 +82,10 @@
                 <!-- Parte superiore contenuto principale -->
                 <div class="container-fluid ms-upper-main-content text-white py-4 px-3">
                     <div class="row">
-                        <div class="col-12 col-md-4 col-lg-2 order-md-3">a</div>
+                        <div class="col-12 col-md-4 col-lg-2 order-md-3 pt-1 mb-4">
+                            <span class="me-3">Nuovo Studente</span>
+                            <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-plus"></i></button>
+                        </div>
                         <div class="col-12 col-md-4 col-lg-6 order-md-1">
                             <div>
                                 <h1 class="fs-3 mb-1 d-inline-block">Boolean</h1>
@@ -104,6 +107,8 @@
                     </div>
                 </div>
                 <!-- /Parte superiore contenuto principale -->
+                <!-- Parte inferiore contenuto principale -->
+                <!-- /Parte inferiore contenuto principale -->
             </div>
         </div>
     </main>
