Main inferiore layout

--- a/index.html
+++ b/index.html
@@ -108,6 +108,18 @@
                 </div>
                 <!-- /Parte superiore contenuto principale -->
                 <!-- Parte inferiore contenuto principale -->
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="col-12 col-lg-8">
+                            <div>a</div>
+                            <div>b</div>
+                        </div>
+                        <div class="col-12 col-lg-4">
+                            <div>c</div>
+                            <div>d</div>
+                        </div>
+                    </div>
+                </div>
                 <!-- /Parte inferiore contenuto principale -->
             </div>
         </div>
