Main inferiore tabella

--- a/index.html
+++ b/index.html
@@ -108,10 +108,129 @@
                 </div>
                 <!-- /Parte superiore contenuto principale -->
                 <!-- Parte inferiore contenuto principale -->
-                <div class="container-fluid">
+                <div class="container-fluid ms-lower-main-content pb-5 pt-4">
                     <div class="row">
                         <div class="col-12 col-lg-8">
-                            <div>a</div>
+                            <div>
+                                <!-- Tabella -->
+                                <div class="card">
+                                    <div class="card-header">
+                                      <h2 class="fs-4">Prossime classi</h2>
+                                    </div>
+                                    <div class="card-body">
+                                        <table class="table table-hover">
+                                            <thead class="fst-normal">
+                                              <tr>
+                                                <th class="col-6 col-md-4 flex-grow-1" scope="col">Nome</th>
+                                                <th class="col-md-2 col-lg-1 d-none d-md-table-cell" scope="col">Data inizio</th>
+                                                <th class="col-md-2 col-lg-1 d-none d-md-table-cell" scope="col">ROI</th>
+                                                <th class="col-3 col-md-2 col-lg-1" scope="col">Stato</th>
+                                                <th class="col-3 col-md-2 col-lg-1" scope="col">Azioni</th>
+                                              </tr>
+                                            </thead>
+                                            <tbody>
+                                              <tr>
+                                                <td>
+                                                    <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 75</span>  
+                                                </td>
+                                                <td class="d-none d-md-table-cell">15 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td>
+                                                    <i class="fa-solid fa-pen me-1"></i>
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <td>
+                                                    <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 76</span>  
+                                                </td>
+                                                <td class="d-none d-md-table-cell">16 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td>
+                                                    <i class="fa-solid fa-pen me-1"></i>
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <td>
+                                                    <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 77</span>  
+                                                </td>
+                                                <td class="d-none d-md-table-cell">17 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
+                                                <td><span class="badge text-bg-warning text-white">Process</span></td>
+                                                <td>
+                                                    <i class="fa-solid fa-pen me-1"></i>
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <td>
+                                                    <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 78</span>  
+                                                </td>
+                                                <td class="d-none d-md-table-cell">18 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td>
+                                                    <i class="fa-solid fa-pen me-1"></i>
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <td>
+                                                    <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 79</span>  
+                                                </td>
+                                                <td class="d-none d-md-table-cell">19 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
+                                                <td><span class="badge text-bg-danger">Failed</span></td>
+                                                <td>
+                                                    <i class="fa-solid fa-pen me-1"></i>
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <td>
+                                                    <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 80</span>  
+                                                </td>
+                                                <td class="d-none d-md-table-cell">20 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td>
+                                                    <i class="fa-solid fa-pen me-1"></i>
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <td>
+                                                    <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 81</span>  
+                                                </td>
+                                                <td class="d-none d-md-table-cell">21 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
+                                                <td><span class="badge text-bg-danger">Failed</span></td>
+                                                <td>
+                                                    <i class="fa-solid fa-pen me-1"></i>
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </td>
+                                              </tr>
+                                              <tr>
+                                                <td>
+                                                    <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 82</span>  
+                                                </td>
+                                                <td class="d-none d-md-table-cell">22 Feb 2021</td>
+                                                <td class="d-none d-md-table-cell">20%</td>
+                                                <td><span class="badge text-bg-success">Done</span></td>
+                                                <td>
+                                                    <i class="fa-solid fa-pen me-1"></i>
+                                                    <i class="fa-solid fa-trash"></i>
+                                                </td>
+                                              </tr>
+                                            </tbody>
+                                        </table>
+                                    </div>
+                                </div>
+                                <!-- /Tabella -->
+                            </div>
                             <div>b</div>
                         </div>
                         <div class="col-12 col-lg-4">
