--- a/index.html
+++ b/index.html
@@ -111,9 +111,8 @@
                 <div class="container-fluid ms-lower-main-content pb-5 pt-4">
                     <div class="row">
                         <div class="col-12 col-lg-8">
-                            <div>
                                 <!-- Tabella -->
-                                <div class="card">
+                                <div class="card mb-4">
                                     <div class="card-header">
                                       <h2 class="fs-4">Prossime classi</h2>
                                     </div>
@@ -230,8 +229,53 @@
                                     </div>
                                 </div>
                                 <!-- /Tabella -->
-                            </div>
-                            <div>b</div>
+                                <!-- F.A.Q. -->
+                                <div class="card">
+                                    <div class="card-header">
+                                        <h2 class="fs-4">F.A.Q.</h2>
+                                    </div>
+                                    <div class="card-body">
+                                        <div class="accordion" id="accordionExample">
+                                            <div class="accordion-item">
+                                              <h2 class="accordion-header" id="headingOne">
+                                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                                                  Come aggiungere un nuovo studente?
+                                                </button>
+                                              </h2>
+                                              <div id="collapseOne" class="accordion-collapse collapse show" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                  Clicca sul + nella sezione in alto blu.
+                                                </div>
+                                              </div>
+                                            </div>
+                                            <div class="accordion-item">
+                                              <h2 class="accordion-header" id="headingTwo">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                                                  Come posso accedere alle informazioni del mio account?
+                                                </button>
+                                              </h2>
+                                              <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                  Clicca sull'icona della campanella.
+                                                </div>
+                                              </div>
+                                            </div>
+                                            <div class="accordion-item">
+                                              <h2 class="accordion-header" id="headingThree">
+                                                <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                                                  Posso usare questa dashboard da mobile?
+                                                </button>
+                                              </h2>
+                                              <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
+                                                <div class="accordion-body">
+                                                  Sì, si può usare questa dashboard da mobile.
+                                                </div>
+                                              </div>
+                                            </div>
+                                          </div>
+                                    </div>
+                                </div>
+                                <!-- /F.A.Q. -->
                         </div>
                         <div class="col-12 col-lg-4">
                             <div>c</div>
