Main inferiore utenti attivi

--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
                 </div>
                 <!-- /Parte superiore contenuto principale -->
                 <!-- Parte inferiore contenuto principale -->
-                <div class="container-fluid ms-lower-main-content pb-5 pt-4">
+                <div class="container-fluid ms-lower-main-content pb-4 pt-4">
                     <div class="row">
                         <div class="col-12 col-lg-8">
                             <!-- Tabella -->
@@ -230,7 +230,7 @@
                             </div>
                             <!-- /Tabella -->
                             <!-- F.A.Q. -->
-                            <div class="card">
+                            <div class="card mb-4">
                                 <div class="card-header">
                                     <h2 class="fs-4">F.A.Q.</h2>
                                 </div>
@@ -301,7 +301,42 @@
                                 </div>
                             </div>
                             <!-- /TODO -->
-                            <div>d</div>
+                            <!-- Utenti attivi -->
+                            <!-- <div class="card">
+                                <img src="img/stats.jpeg" class="card-img-top" alt="grafico">
+                                <div class="card-body">
+                                    <h4>Utenti attivi</h4>
+                                    <div>Lista degli utenti attivi in piattaforma nell'ultimo mese</div>                               
+                                </div>
+                                <ul class="list-group list-group-flush">
+                                    <li class="list-group-item">Gennaio: 1200</li>
+                                    <li class="list-group-item">Febbraio: 1800</li>
+                                    <li class="list-group-item">Marzo: 1500</li>
+                                </ul>
+                                <div class="px-3 py-4">
+                                    <a href="#" class="text-decoration-underline text-primary">Visualizza report approfondito</a> 
+                                </div>
+                            </div> -->
+                            <div class="card mb-4">
+                                <div class="card-body">
+                                    <div class="card">
+                                        <img src="img/stats.jpeg" class="card-img-top" alt="grafico">
+                                        <div class="card-body">
+                                            <h4>Utenti attivi</h4>
+                                            <div>Lista degli utenti attivi in piattaforma nell'ultimo mese</div> 
+                                        </div>
+                                        <ul class="list-group list-group-flush">
+                                            <li class="list-group-item">Gennaio: 1200</li>
+                                            <li class="list-group-item">Febbraio: 1800</li>
+                                            <li class="list-group-item">Marzo: 1500</li>
+                                        </ul>
+                                        <div class="px-3 py-4 card-link">
+                                            <a href="#" class="text-decoration-underline text-primary">Visualizza report approfondito</a> 
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <!-- /Utenti attivi -->
                         </div>
                     </div>
                 </div>
