--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
                     <div class="row">
                         <div class="col-12 col-md-4 col-lg-2 order-md-3 pt-1 mb-4">
                             <span class="me-3">Nuovo Studente</span>
-                            <button type="button" class="btn btn-outline-light"><i class="fa-solid fa-plus"></i></button>
+                            <button type="button" class="btn btn-outline-light" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample"><i class="fa-solid fa-plus"></i></button>
                         </div>
                         <div class="col-12 col-md-4 col-lg-6 order-md-1">
                             <div>
@@ -302,21 +302,6 @@
                             </div>
                             <!-- /TODO -->
                             <!-- Utenti attivi -->
-                            <!-- <div class="card">
-                                <img src="img/stats.jpeg" class="card-img-top" alt="grafico">
-                                <div class="card-body">
-                                    <h4>Utenti attivi</h4>
-                                    <div>Lista degli utenti attivi in piattaforma nell'ultimo mese</div>                               
-                                </div>
-                                <ul class="list-group list-group-flush">
-                                    <li class="list-group-item">Gennaio: 1200</li>
-                                    <li class="list-group-item">Febbraio: 1800</li>
-                                    <li class="list-group-item">Marzo: 1500</li>
-                                </ul>
-                                <div class="px-3 py-4">
-                                    <a href="#" class="text-decoration-underline text-primary">Visualizza report approfondito</a> 
-                                </div>
-                            </div> -->
                             <div class="card mb-4">
                                 <div class="card-body">
                                     <div class="card">
@@ -346,6 +331,83 @@
     </main>
     <!-- /Main -->
 
+    <!-- Offcanvas -->
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasExample" aria-labelledby="offcanvasExampleLabel">
+        <div class="offcanvas-header">
+            <h5 class="offcanvas-title" id="offcanvasExampleLabel">Inserisci un nuovo studente</h5>
+            <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+        </div>
+        <div class="offcanvas-body">
+            <form method="get"></form>
+                <div class="row">
+                    <div class="col-6">
+                        <label for="inputname" class="form-label">Nome</label>
+                        <input type="text" class="form-control" id="inputname">
+                    </div>
+                    <div class="col-6">
+                        <label for="inputsurname" class="form-label">Cognome</label>
+                        <input type="text" class="form-control" id="inputsurname">
+                    </div>
+                    <div class="col-6">
+                        <label for="inputemail1" class="form-label">Email</label>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <input type="email" class="form-control" id="inputemail1" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <label for="inputpassword1" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="inputpassword1">
+                    </div>
+                    <div class="col-6">
+                        <label for="inputemail2" class="form-label">Indirizzo Email</label>
+                        <div class="input-group mb-3">
+                            <span class="input-group-text" id="basic-addon1">@</span>
+                            <input type="email" class="form-control" id="inputemail2" aria-label="Username" aria-describedby="basic-addon1">
+                        </div>
+                    </div>
+                    <div class="col-6">
+                        <label for="inputpassword2" class="form-label">Password</label>
+                        <input type="password" class="form-control" id="inputpassword2">
+                    </div>
+                    <div class="col-12">
+                        <label for="inputaddress" class="form-label">Indirizzo</label>
+                        <input type="text" class="form-control" id="inputaddress">
+                    </div>
+                    <div class="col-6">
+                        <label for="inputcity" class="form-label">Indirizzo</label>
+                        <input type="text" class="form-control" id="inputcity">
+                    </div>
+                    <div class="col-4">
+                        <label for="inputcountry" class="form-label">Stato</label>
+                        <select class="form-select mb-3" id="inputcountry" aria-label=".form-select-lg example">
+                            <option selected>Scegli...</option>
+                            <option value="1">Italia</option>
+                            <option value="2">Australia</option>
+                            <option value="3">Danimarca</option>
+                        </select>             
+                    </div>
+                    <div class="col-2">
+                        <label for="inputzip" class="form-label">CAP</label>
+                        <input type="text" class="form-control" id="inputzip">
+                    </div>
+                    <div class="col-12 mb-4">
+                        <label for="formFile" class="form-label">Foto</label>
+                        <input class="form-control" type="file" id="formFile" placeholder="Nessun file selezionato">
+                    </div>
+                    <div class="col-12 mb-4">
+                        <input type="checkbox" id="inputcheckbox">
+                        <label for="inputcheckbox">Seleziona per proseguire</label>
+                    </div>
+                    <div class="col">
+                        <button class="btn btn-primary" type="submit">Salva</button>
+                        <input class="btn btn-warning" type="reset" value="Svuota">
+                    </div>
+                </div>
+            </form>
+        </div>
+    </div>
+    <!-- /offcanvas -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
 </body>
 </html>
