--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
                                         <tbody>
                                             <tr>
                                             <td>
-                                                <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 75</span>  
+                                                <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 75</span>  
                                             </td>
                                             <td class="d-none d-md-table-cell">15 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
@@ -142,7 +142,7 @@
                                             </tr>
                                             <tr>
                                             <td>
-                                                <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 76</span>  
+                                                <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 76</span>  
                                             </td>
                                             <td class="d-none d-md-table-cell">16 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
@@ -154,7 +154,7 @@
                                             </tr>
                                             <tr>
                                             <td>
-                                                <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 77</span>  
+                                                <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 77</span>  
                                             </td>
                                             <td class="d-none d-md-table-cell">17 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
@@ -166,7 +166,7 @@
                                             </tr>
                                             <tr>
                                             <td>
-                                                <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 78</span>  
+                                                <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 78</span>  
                                             </td>
                                             <td class="d-none d-md-table-cell">18 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
@@ -178,7 +178,7 @@
                                             </tr>
                                             <tr>
                                             <td>
-                                                <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 79</span>  
+                                                <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 79</span>  
                                             </td>
                                             <td class="d-none d-md-table-cell">19 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
@@ -190,7 +190,7 @@
                                             </tr>
                                             <tr>
                                             <td>
-                                                <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 80</span>  
+                                                <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 80</span>  
                                             </td>
                                             <td class="d-none d-md-table-cell">20 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
@@ -202,7 +202,7 @@
                                             </tr>
                                             <tr>
                                             <td>
-                                                <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 81</span>  
+                                                <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 81</span>  
                                             </td>
                                             <td class="d-none d-md-table-cell">21 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
@@ -214,7 +214,7 @@
                                             </tr>
                                             <tr>
                                             <td>
-                                                <img src="img/class-avatar.jpg" alt="Avatar" class="me-2"><span>Classe 82</span>  
+                                                <img src="img/class-avatar.png" alt="Avatar" class="me-2"><span>Classe 82</span>  
                                             </td>
                                             <td class="d-none d-md-table-cell">22 Feb 2021</td>
                                             <td class="d-none d-md-table-cell">20%</td>
